2006-11-24  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/*:
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	- separate the glossy functions into clearlooks_style_glossy.c.
	Created a ClearlooksStyleFunctions struct containing function pointer for
	the different styles.
	- add "style" option to the gtkrc, valid values are CLASSIC and
	GLOSSY (removed gloss option)
	- fix merging of rc styles, before it was not possible to override
	only some options.
	- Changed some things to use support (ge_cairo_rounded_rectangle,
	CairoCorner)

	* engines/support/cairo-support.c: (ge_cairo_mirror),
	(ge_cairo_exchange_axis):
	* engines/support/cairo-support.h:
	- Add ge_cairo_exchange_axis, a common operation done by clearlooks.
	- fix ge_cairo_mirror

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- set "style = CLASSIC" not some glossy stuff

2006-11-20  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_radiobutton): Hide border on menus

2006-11-20  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_cairo_stroke_rectangle):
	- Wrong variable names in the codepath using stroke.

2006-11-19  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc: Tweak base[PRELIGHT] for checkboxes

2006-11-19  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button_with_gloss): Draw buttons with inset border

2006-11-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Industrial/gtk-2.0/gtkrc:
	- Initial color scheme support

2006-11-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.h:
	- definition for clearlooks_draw_button_with_gloss was missing

	* engines/support/cairo-support.c: (ge_gdk_color_to_cairo),
	(ge_cairo_color_to_gtk), (ge_cairo_set_color),
	(ge_cairo_pattern_add_color_stop_color),
	(ge_cairo_pattern_add_color_stop_shade), (ge_cairo_simple_border),